// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonSideMenu person does not have org permission renders delete correctly 1`] = `
<Connect(SideMenu)
  menuItems={
    Array [
      Object {
        "action": [Function],
        "label": "Edit",
      },
      Object {
        "action": [Function],
        "label": "Delete Person",
      },
    ]
  }
/>
`;

exports[`PersonSideMenu person has org permission renders assign correctly 1`] = `
<Connect(SideMenu)
  menuItems={
    Array [
      Object {
        "action": [Function],
        "label": "Edit",
      },
      Object {
        "action": [Function],
        "label": "Assign",
      },
    ]
  }
/>
`;

exports[`PersonSideMenu person has org permission renders unassign correctly 1`] = `
<Connect(SideMenu)
  menuItems={
    Array [
      Object {
        "action": [Function],
        "label": "Edit",
      },
      Object {
        "action": [Function],
        "label": "Unassign",
      },
    ]
  }
/>
`;

exports[`PersonSideMenu person has org permission renders user-created correctly 1`] = `
<Connect(SideMenu)
  menuItems={Array []}
/>
`;
